# CSEEngine

./: CMakeLists.txt
application/: CMakeLists.txt
application/application/: App.cpp  App.h  AppPlatform.h  AppPlatform_Impl.h  AppPlatform_SDL3.cpp  AppPlatform_SDL3.h
application/input/: InputManager.cpp  InputManager.h  Keyboard.h
application/window/: PlatformWindowInfo_App.h  Window.h  WindowEvent.h  Window_Impl.h  Window_SDL3.cpp  Window_SDL3.h
assets/materials/: frag.spv  vert.spv  vertdupe.spv
core/: Any.h  CMakeLists.txt  CSEAssert.cpp  CSEAssert.h  Expected.h  Hash.h  Logger.cpp  Logger.h  Optional.h  TypeTraits.h
core/containers/: LinkedArray.h  SkipArray.h
core/eventsystem/: EventCallback.h  EventCallbackList.h  EventDistributor.h  EventQueue.h  EventTraits.h
core/filesystem/: File.h  FileAccessModes.h  FileNavigator.h  FileSystem.cpp  FileSystem.h
core/filesystem/files/: File_Win32.cpp  File_Win32.h
core/filesystem/navigators/: FileNavigator_Device.h  FileNavigator_Win32.cpp  FileNavigator_Win32.h
core/memory/: MemoryUtils.h
core/refcount/: Ref.h  RefCounted.h
engine/: CMakeLists.txt  EngineApp.cpp  EngineApp.h
engine/utility/: PlatformWindowInfo_Conversion.cpp  PlatformWindowInfo_Conversion.h
renderer/: CMakeLists.txt  RenderContext.cpp  RenderContext.h
renderer/gpu/: GPUBackend.cpp  GPUBackend.h  GPUBackend_Impl.h  GPUBuffer.h  GPUBufferCreateInfo.h  GPUDataLayout.cpp  GPUDataLayout.h  GPUDataLayoutRegistry.cpp  GPUDataLayoutRegistry.h  GPUImage.h  GPUImageCreateInfo.h  GPUImageFormats.h  GPUPipeline.h  GPUPipelineCreateInfo.h  GPUPipelineInputs.h
renderer/gpu/vulkan/: Compositor_Vulkan.h  Config_Vulkan.h  DescriptorSetManager_Vulkan.cpp  DescriptorSetManager_Vulkan.h  GPUBackend_Vulkan.cpp  GPUBackend_Vulkan.h  GPUBuffer_Vulkan.cpp  GPUBuffer_Vulkan.h  GPUDataLayout_Vulkan.cpp  GPUDataLayout_Vulkan.h  GPUDevice_Vulkan.cpp  GPUDevice_Vulkan.h  GPUImage_Vulkan.cpp  GPUImage_Vulkan.h  GPUPipelineBuilder_Vulkan.cpp  GPUPipelineBuilder_Vulkan.h  GPUPipelineData_Vulkan.cpp  GPUPipelineData_Vulkan.h  GPUPipelineManager_Vulkan.cpp  GPUPipelineManager_Vulkan.h  GPUPipeline_Vulkan.cpp  GPUPipeline_Vulkan.h  ShaderProcessor_Vulkan.cpp  ShaderProcessor_Vulkan.h  Utils_Vulkan.h  Vertex_Vulkan.h
renderer/gpu/vulkan/internal/: DescriptorPool_Vulkan.cpp  DescriptorPool_Vulkan.h  GPUPipelineBuilder_Vulkan.cpp  GPUPipelineBuilder_Vulkan.h  GPUPipelineRegistry_Vulkan.cpp  GPUPipelineRegistry_Vulkan.h  RenderGraph_Vulkan.h  SSBOAllocator_Vulkan.cpp  SSBOAllocator_Vulkan.h  ShaderProcessor_Vulkan.cpp  ShaderProcessor_Vulkan.h  Utils_Vulkan.h
renderer/utility/: PlatformWindowInfo_Renderer.h
tests/sandbox/: AppTest.h  CMakeLists.txt  EventsTest.h  ExpectedTest.h  FileSystemTest.h  LinkedArrayTest.h  RefCountedTest.h  ShaderReflectVKTest.h  main.cpp
tests/sandbox/testdir/: read.txt
